--- a/src/javanewproject/Form_dashboard.form
+++ b/src/javanewproject/Form_dashboard.form
@@ -425,7 +425,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="horizontalAlignment" type="int" value="0"/>
-                        <Property name="text" type="java.lang.String" value="Tea"/>
+                        <Property name="text" type="java.lang.String" value="lecturers"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel_tech_logo">
